--- a/build.xml
+++ b/build.xml
@@ -83,8 +83,10 @@
             <echo message="${build.dir} has been deleted" />
             <delete dir="${src.dir}/${xjc.package}" />
             <echo message="${src.dir}/${xjc.package} has been deleted" />
-            <delete file="catalog.xml" />
-            <echo message="catalog.xml has been deleted" />
+            <delete file="resources/client-server-json.log" />
+            <echo message="json log has been deleted" />
+        	<delete file="resources/client-server-xml.log" />
+        	<echo message="xml log has been deleted" />
         </target>
         <target name="install" depends="clean, init">
             <echo message="Compile target has been called" />
@@ -105,8 +107,8 @@
         </target>
     	  <target name="xmlRequests">
     	    <echo message="XML requests" />
-    	    <java classname="introsde.rest.clietn.xml" classpath="build" fork="true">
-    	      <arg value="${url}"/>
+    	    <java classname="introsde.rest.client.xml.ClientXml" classpath="build" fork="true">
+    	     
     	      <classpath>
     	        <fileset dir="${lib.dir}">
     	          <include name="**/*.jar" />
@@ -115,10 +117,11 @@
     	      </classpath>
     	    </java>
     	  </target>
+    	
 
     	  <target name="jsonRequests">
     	    <echo message="JSON requests" />
-    	    <java classname="introsde.rest.clietn.json" classpath="build" fork="true">
+    	    <java classname="introsde.rest.client.json.ClientJson" classpath="build" fork="true">
     	      <arg value="${url}"/>
     	      <classpath>
     	        <fileset dir="${lib.dir}">
@@ -129,7 +132,7 @@
     	    </java>
     	  </target>
     	
-  	  <target name="execute.client" depends="xmlRequests, jsonRequests">
+  	  <target name="execute.client" depends="install, xmlRequests, jsonRequests">
   	    <echo message="Executing Assignment 2" />
   	  </target>    	
     	
